--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 # Deep Learning Frameworks
+# NOTE: Install PyTorch with CUDA support using:
+# pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
+# 
+# For CPU-only (not recommended for this project):
+# pip install torch torchvision torchaudio
 torch>=2.0.0
 torchvision>=0.15.0
-tensorflow>=2.13.0
+torchaudio>=2.0.0
 
 # Computer Vision
 opencv-python>=4.8.0
